docs: adding read, update, delete documentations
