# handler/createOpening.go
@@ -11,7 +11,7 @@ import (
 
 // @Summary Create an opening
 // @Description Create a new job opening
-// @Tags openings
+// @Tags Openings
 // @Accept json
 // @Produce json
 // @Param request body CreateOpeningRequest true "Request body"
