# handler/listOpenings.go
@@ -7,6 +7,16 @@ import (
 	"github.com/vpcmps/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List opening
+// @Description List a existing job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(c *gin.Context) {
 	openings := []schemas.Opening{}
 
