# handler/updateOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/vpcmps/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show opening
+// @Description Show a existing job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Request body"
+// @Param request body UpdateOpeningRequest true "Request body"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	request := UpdateOpeningRequest{}
